# obstacle_detector

./: CMakeLists.txt  package.xml
include/obstacle_detector/: obstacle_extractor.h
include/obstacle_detector/displays/: circle_visual.h
include/obstacle_detector/panels/: obstacle_extractor_panel.h
include/obstacle_detector/utilities/: figure_fitting.h
launch/: nodes.launch  obstacle_detect.launch  try_robopeak.launch  try_rplidarS1.launch
param/: angle_filter_angle.yaml
src/: obstacle_extractor.cpp  obstacle_tracker.cpp  scans_merger.cpp  test.cpp
src/displays/: obstacles_display.cpp
src/panels/: obstacle_extractor_panel.cpp
